fix pointer events for captain's log on mobile

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -44,6 +44,7 @@ a {
     display: flex;
 
     & > div {
+        pointer-events: none;
         width: 33.3333333333333333333333333333%;
 
         &:first-child,
@@ -66,6 +67,7 @@ a {
             background: rgba(255, 255, 255, .95);
             overflow: hidden;
             padding: .225rem;
+            pointer-events: auto;
         }
 
         &:not(:first-child):not(:last-child) {
